--- a/agendamento.html
+++ b/agendamento.html
@@ -27,17 +27,65 @@
             <select>
               <option>Selecione uma data e hora</option>
             </select>
-            <div class="calendario">
-              <!-- Calendário estático -->
-              <p>Calendário (Exemplo)</p>
+            <div class="calendar-container">
+              <div class="calendar-header">
+                <button class="nav-button">&lt;</button>
+                <span>June 2024</span>
+                <button class="nav-button">&gt;</button>
+              </div>
+              <div class="calendar-grid">
+                <span class="day-name">SUN</span>
+                <span class="day-name">MON</span>
+                <span class="day-name">TUE</span>
+                <span class="day-name">WED</span>
+                <span class="day-name">THU</span>
+                <span class="day-name">FRI</span>
+                <span class="day-name">SAT</span>
+                <span class="day empty"></span>
+                <span class="day empty"></span>
+                <span class="day">1</span>
+                <span class="day">2</span>
+                <span class="day">3</span>
+                <span class="day">4</span>
+                <span class="day">5</span>
+                <span class="day">6</span>
+                <span class="day">7</span>
+                <span class="day">8</span>
+                <span class="day">9</span>
+                <span class="day active">10</span>
+                <span class="day">11</span>
+                <span class="day">12</span>
+                <span class="day">13</span>
+                <span class="day">14</span>
+                <span class="day">15</span>
+                <span class="day">16</span>
+                <span class="day">17</span>
+                <span class="day">18</span>
+                <span class="day">19</span>
+                <span class="day">20</span>
+                <span class="day">21</span>
+                <span class="day">22</span>
+                <span class="day">23</span>
+                <span class="day">24</span>
+                <span class="day">25</span>
+                <span class="day selected">26</span>
+                <span class="day">27</span>
+                <span class="day">28</span>
+                <span class="day">29</span>
+                <span class="day">30</span>
+                <span class="day empty"></span>
+              </div>
+              <div class="time-slot">
+                8:00 AM
+              </div>
             </div>
             <button class="btn primary">SALVAR</button>
           </form>
-          <div class="acessibilidade">
-            <img src="icones/mao.png" alt="Libras">
-            <img src="icones/audio.png" alt="Áudio">
-            <img src="icones/visao.png" alt="Baixa visão">
-          </div>
+        </div>
+        <div class="acessibilidade">
+          <img src="icones/mao.png" alt="Libras">
+          <img src="icones/audio.png" alt="Áudio">
+          <img src="icones/visao.png" alt="Baixa visão">
         </div>
       </div>
 </body>
