--- a/cadastro.html
+++ b/cadastro.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <img src="logo.png" alt="Logo Medlife" class="logo">
+    <img src="img/logo-medlife.png" alt="Logo Medlife" class="logo">
     <h1>MEDLIFE</h1>
     <form class="grid-form">
       <div>
@@ -31,19 +31,19 @@
         <label>Senha *</label>
         <div class="input-group">
           <input type="password">
-          <span class="icon">👁️</span>
+          <span class="password-toggle"></span>
         </div>
       </div>
       <div>
         <label>Confirmar Senha *</label>
         <div class="input-group">
           <input type="password">
-          <span class="icon">👁️</span>
+          <span class="password-toggle"></span>
         </div>
       </div>
     </form>
     <div class="buttons">
-      <button class="btn">VOLTAR</button>
+      <button class="btn secondary">VOLTAR</button>
       <button class="btn primary">SALVAR</button>
     </div>
     <div class="acessibilidade">
