--- a/index.html
+++ b/index.html
@@ -8,23 +8,21 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo.png" alt="Logo Medlife" class="logo">
+    <img src="img/logo-medlife.png" alt="Logo Medlife" class="logo">
     <h1>MEDLIFE</h1>
     <div class="tabs">
-      <button class="tab">Entrar</button>
-      <button class="tab active">Cadastrar</button>
+      <button class="tab active">Entrar</button>
+      <button class="tab">Cadastrar</button>
     </div>
     <form>
       <label>Email</label>
       <div class="input-group">
-        <span class="icon">👤</span>
         <input type="email" placeholder="Exemplo@gmail.com">
       </div>
       <label>Senha</label>
       <div class="input-group">
-        <span class="icon">🔒</span>
         <input type="password">
-        <span class="icon">👁️</span>
+        <span class="password-toggle"></span>
       </div>
       <div class="remember">
         <input type="checkbox"> <label>Lembrar senha</label>
