--- a/agendamento.html
+++ b/agendamento.html
@@ -83,9 +83,8 @@
           </form>
         </div>
         <div class="acessibilidade">
-          <img src="icones/mao.png" alt="Libras">
-          <img src="icones/audio.png" alt="Áudio">
-          <img src="icones/visao.png" alt="Baixa visão">
+          <img src="img/acessibilidade.png" alt="Acessibilidade" class="acessibilidade-icon">
+
         </div>
       </div>
 </body>
