--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
 <body>
   <div class="container">
     <img src="img/logo-medlife.png" alt="Logo Medlife" class="logo">
-    <h1>MEDLIFE</h1>
     <div class="tabs">
       <button class="tab active">Entrar</button>
       <button class="tab">Cadastrar</button>
@@ -31,9 +30,8 @@
       <a href="#" class="forgot">Esqueceu a senha?</a>
     </form>
     <div class="acessibilidade">
-      <img src="icones/mao.png" alt="Libras">
-      <img src="icones/audio.png" alt="Áudio">
-      <img src="icones/visao.png" alt="Baixa visão">
+      <img src="img/acessibilidade.png" alt="Acessibilidade" class="acessibilidade-icon">
+
     </div>
   </div>
 </body>
