--- a/cadastro.html
+++ b/cadastro.html
@@ -9,33 +9,32 @@
 <body>
 <div class="container">
     <img src="img/logo-medlife.png" alt="Logo Medlife" class="logo">
-    <h1>MEDLIFE</h1>
     <form class="grid-form">
       <div>
-        <label>Nome Completo *</label>
+        <label>Nome Completo <span class="required-asterisk">*</span></label>
         <input type="text">
       </div>
       <div>
-        <label>CPF *</label>
+        <label>CPF <span class="required-asterisk">*</span></label>
         <input type="text">
       </div>
       <div>
-        <label>Email *</label>
+        <label>Email <span class="required-asterisk">*</span></label>
         <input type="email" value="Exemplo@gmail.com">
       </div>
       <div>
-        <label>CEP *</label>
+        <label>CEP <span class="required-asterisk">*</span></label>
         <input type="text">
       </div>
       <div>
-        <label>Senha *</label>
+        <label>Senha <span class="required-asterisk">*</span></label>
         <div class="input-group">
           <input type="password">
           <span class="password-toggle"></span>
         </div>
       </div>
       <div>
-        <label>Confirmar Senha *</label>
+        <label>Confirmar Senha <span class="required-asterisk">*</span></label>
         <div class="input-group">
           <input type="password">
           <span class="password-toggle"></span>
@@ -47,9 +46,8 @@
       <button class="btn primary">SALVAR</button>
     </div>
     <div class="acessibilidade">
-      <img src="icones/mao.png" alt="Libras">
-      <img src="icones/audio.png" alt="Áudio">
-      <img src="icones/visao.png" alt="Baixa visão">
+      <img src="img/acessibilidade.png" alt="Acessibilidade" class="acessibilidade-icon">
+
     </div>
   </div>
 </body>
