--- a/cadastro.html
+++ b/cadastro.html
@@ -29,15 +29,19 @@
       <div>
         <label>Senha <span class="required-asterisk">*</span></label>
         <div class="input-group">
-          <input type="password">
-          <span class="password-toggle"></span>
+          <input type="password" id="cadastro-password">
+          <span class="password-toggle" onclick="togglePassword('cadastro-password', this)">
+            <img src="img/olho.png" alt="Mostrar senha" style="width:24px;height:24px;">
+          </span>
         </div>
       </div>
       <div>
         <label>Confirmar Senha <span class="required-asterisk">*</span></label>
         <div class="input-group">
-          <input type="password">
-          <span class="password-toggle"></span>
+          <input type="password" id="cadastro-confirm-password">
+          <span class="password-toggle" onclick="togglePassword('cadastro-confirm-password', this)">
+            <img src="img/olho.png" alt="Mostrar senha" style="width:24px;height:24px;">
+          </span>
         </div>
       </div>
     </form>
@@ -47,9 +51,20 @@
     </div>
     <div class="acessibilidade">
       <img src="img/acessibilidade.png" alt="Acessibilidade" class="acessibilidade-icon">
-
     </div>
   </div>
+<script>
+function togglePassword(inputId, toggleElem) {
+  const input = document.getElementById(inputId);
+  if (input.type === 'password') {
+    input.type = 'text';
+    toggleElem.querySelector('img').style.opacity = 0.5;
+  } else {
+    input.type = 'password';
+    toggleElem.querySelector('img').style.opacity = 1;
+  }
+}
+</script>
 </body>
 </html>
   
