Enviando modificacoes de arquivos

--- a/agendamento.html
+++ b/agendamento.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
         <h2>Central de agendamento Online</h2>
-        <a href="#" class="logout">SAIR</a>
+        <a href="#" class="logout" onclick="window.location.href='index.html'">SAIR</a>
       </div>
       <div class="container agenda">
         <div class="card">
