--- a/cadastro.html
+++ b/cadastro.html
@@ -46,8 +46,8 @@
       </div>
     </form>
     <div class="buttons">
-      <button class="btn secondary">VOLTAR</button>
-      <button class="btn primary">SALVAR</button>
+      <button class="btn secondary" onclick="window.location.href='index.html'">VOLTAR</button>
+      <button class="btn primary" onclick="window.location.href='agendamento.html'">SALVAR</button>
     </div>
     <div class="acessibilidade">
       <img src="img/acessibilidade.png" alt="Acessibilidade" class="acessibilidade-icon">
