--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <div class="container">
     <img src="img/logo-medlife.png" alt="Logo Medlife" class="logo">
     <div class="tabs">
-      <button class="tab active">Entrar</button>
-      <button class="tab">Cadastrar</button>
+      <button class="tab active" onclick="window.location.href='index.html'">Entrar</button>
+      <button class="tab" onclick="window.location.href='cadastro.html'">Cadastrar</button>
     </div>
     <form>
       <label>Email</label>
@@ -28,7 +28,7 @@
       <div class="remember">
         <input type="checkbox"> <label>Lembrar senha</label>
       </div>
-      <button class="btn primary center-btn">LOGIN</button>
+      <button class="btn primary center-btn" onclick="window.location.href='agendamento.html'">LOGIN</button>
       <a href="#" class="forgot">Esqueceu a senha?</a>
     </form>
     <div class="acessibilidade">
